# bwt

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitattributes  README.md  bwt.c  bwt.h  readme.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cmake.yml
man/: pbwt.1
src/: CMakeLists.txt  build.sh  bwt.c  bwt.h  features.h  pbwt.c  utils.c  utils.h
src/libbwt/: CMakeLists.txt  bwt.c  bwt.h  internal.h  libbwt.c  libbwt.h  main.h  mtf.c  mtf.h  rle.c  rle.h  utils.c
src/libbwt/bwt/: bwt.c  bwt.h
src/libbwt/include/: internal.h  main.h  utils.h
src/libbwt/memory/: memory.c  memory.h
src/libbwt/mtf/: mtf.c  mtf.h
src/libbwt/rle/: rle.c  rle.h
src/libbwt/utils/: utils.c  utils.h
src/man/: pbwt.1
src/utils/: utils.c  utils.h
